[package]
name = "gmbr"
version = "0.1.0"
authors = ["aleixsanchis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config = "0.10.1"
serde_json = "1.0"
hex = "0.4.0"
sdl2 = { version = "0.33.0", features = ["bundled", "static-link"] }